[gd_scene load_steps=10 format=2]

[ext_resource path="res://ThemeStuff/Window.tres" type="Theme" id=1]
[ext_resource path="res://Startup.gd" type="Script" id=2]
[ext_resource path="res://Top.gd" type="Script" id=3]
[ext_resource path="res://FileMenu.gd" type="Script" id=4]
[ext_resource path="res://TitleBar.gd" type="Script" id=5]
[ext_resource path="res://X.png" type="Texture" id=6]
[ext_resource path="res://[].png" type="Texture" id=7]
[ext_resource path="res://Minimize.png" type="Texture" id=8]
[ext_resource path="res://SceneChanger2.gd" type="Script" id=9]

[node name="Window" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )

[node name="Text" type="TextEdit" parent="."]
margin_top = 50.0
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 1 )
smooth_scrolling = true
caret_blink = true

[node name="Top" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 960, 0 )
script = ExtResource( 3 )

[node name="Background" type="Panel" parent="Top"]
margin_right = 1920.0
margin_bottom = 50.0
theme = ExtResource( 1 )

[node name="File" type="Button" parent="Top"]
margin_right = 100.0
margin_bottom = 48.0
theme = ExtResource( 1 )
toggle_mode = true
text = "File"

[node name="Edit" type="Button" parent="Top"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 48.0
theme = ExtResource( 1 )
toggle_mode = true
text = "Edit"

[node name="FileMenu" type="Panel" parent="Top"]
margin_top = 50.0
margin_right = 154.0
margin_bottom = 297.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="New" type="Button" parent="Top/FileMenu"]
margin_right = 154.0
margin_bottom = 49.0
theme = ExtResource( 1 )
text = "New"

[node name="New Window" type="Button" parent="Top/FileMenu"]
margin_top = 49.0
margin_right = 154.0
margin_bottom = 98.0
theme = ExtResource( 1 )
text = "New Window"

[node name="Save" type="Button" parent="Top/FileMenu"]
margin_top = 98.0
margin_right = 154.0
margin_bottom = 147.0
theme = ExtResource( 1 )
text = "Save"

[node name="SaveAs" type="Button" parent="Top/FileMenu"]
margin_top = 147.0
margin_right = 154.0
margin_bottom = 196.0
theme = ExtResource( 1 )
text = "Save As"

[node name="Exit" type="Button" parent="Top/FileMenu"]
margin_top = 196.0
margin_right = 154.0
margin_bottom = 245.0
theme = ExtResource( 1 )
text = "Exit"

[node name="SaveWarn" type="ConfirmationDialog" parent="Top/FileMenu"]
margin_left = 237.0
margin_top = 218.0
margin_right = 477.0
margin_bottom = 318.0
rect_pivot_offset = Vector2( 120, 30 )
window_title = "Warning!"
dialog_text = "Clicking \"OK\" will erase all text, 
are you sure you want to continue?"

[node name="QuitWarn" type="ConfirmationDialog" parent="Top/FileMenu"]
margin_left = 237.0
margin_top = 218.0
margin_right = 619.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 120, 30 )
window_title = "Warning!"
dialog_text = "Clicking \"OK\" will close without saving, are you sure you want to continue?"
dialog_autowrap = true

[node name="SaveDialog" type="FileDialog" parent="Top/FileMenu"]
margin_left = 161.0
margin_top = 131.0
margin_right = 661.0
margin_bottom = 462.0
theme = ExtResource( 1 )
window_title = "Save File"
resizable = true
access = 2
current_dir = "/"
current_path = "/"

[node name="TitleBar" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1720.0
margin_right = -150.0
margin_bottom = 48.0
script = ExtResource( 5 )

[node name="Middle" type="HBoxContainer" parent="TitleBar"]
margin_left = 28.0
margin_top = -1.0
margin_right = 1548.0
margin_bottom = 47.0
alignment = 1

[node name="Title" type="Label" parent="TitleBar/Middle"]
margin_left = 678.0
margin_top = 7.0
margin_right = 842.0
margin_bottom = 40.0
text = "Better Notepad"
align = 1
valign = 1

[node name="Exit" type="TextureButton" parent="TitleBar"]
margin_left = 1670.0
margin_right = 1720.0
margin_bottom = 48.0
theme = ExtResource( 1 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="Fullscreen" type="TextureButton" parent="TitleBar"]
margin_left = 1620.0
margin_right = 1670.0
margin_bottom = 48.0
theme = ExtResource( 1 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="Minimize" type="TextureButton" parent="TitleBar"]
margin_left = 1570.0
margin_right = 1620.0
margin_bottom = 48.0
theme = ExtResource( 1 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="SceneChanger" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="SceneChanger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="SceneChanger"]

[node name="Button" type="Button" parent="."]
margin_left = -38.0
margin_top = -21.0
margin_right = 46.0
margin_bottom = 52.0

[connection signal="text_changed" from="Text" to="Top/FileMenu" method="_on_Text_text_changed"]
[connection signal="toggled" from="Top/File" to="Top" method="_on_File_toggled"]
[connection signal="pressed" from="Top/FileMenu/New" to="Top/FileMenu" method="_on_New_pressed"]
[connection signal="pressed" from="Top/FileMenu/New Window" to="Top/FileMenu" method="_on_New_Window_pressed"]
[connection signal="pressed" from="Top/FileMenu/Save" to="Top/FileMenu" method="_on_Save_pressed"]
[connection signal="pressed" from="Top/FileMenu/SaveAs" to="Top/FileMenu" method="_on_SaveAs_pressed"]
[connection signal="pressed" from="Top/FileMenu/Exit" to="Top/FileMenu" method="_on_Exit_pressed"]
[connection signal="confirmed" from="Top/FileMenu/SaveWarn" to="Top/FileMenu" method="_on_SaveWarn_confirmed"]
[connection signal="confirmed" from="Top/FileMenu/QuitWarn" to="Top/FileMenu" method="_on_QuitWarn_confirmed"]
[connection signal="file_selected" from="Top/FileMenu/SaveDialog" to="Top/FileMenu" method="_on_SaveDialog_file_selected"]
[connection signal="gui_input" from="TitleBar" to="TitleBar" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="TitleBar/Exit" to="Top/FileMenu" method="_on_Exit_pressed"]
[connection signal="pressed" from="TitleBar/Fullscreen" to="TitleBar" method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="TitleBar/Minimize" to="TitleBar" method="_on_Minimize_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
